--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.1",
+    "react-db-google-sheets": "^2.1.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
+    "react-google-charts": "^3.0.15",
     "react-native": "^0.63.2",
     "react-native-fusioncharts": "^4.1.2",
     "react-redux": "^7.2.1",
@@ -35,7 +37,8 @@
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "tabletop": "^1.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
