--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "navbar": "^2.1.0",
     "react": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-db-google-sheets": "^2.1.1",
@@ -34,6 +35,7 @@
     "react-leaflet": "^2.7.0",
     "react-native": "^0.63.2",
     "react-native-fusioncharts": "^4.1.2",
+    "react-native-image-view": "^2.1.9",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
