--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-leaflet": "^2.7.0",
     "react-native": "^0.63.2",
     "react-native-fusioncharts": "^4.1.2",
+    "react-native-hyperlink": "0.0.19",
     "react-native-image-view": "^2.1.9",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
