--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvasjs-react-charts": "^1.0.5",
     "firebase": "^7.19.1",
     "fusioncharts": "^3.15.2",
+    "kill-port": "^1.6.1",
     "leaflet": "^1.7.1",
     "material-dashboard-react": "^1.9.0",
     "mdbreact": "^4.27.0",
