--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-image-view": "^2.1.9",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-router-link": "^2.0.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
